modificacion de colores

--- a/pages/products.html
+++ b/pages/products.html
@@ -125,7 +125,7 @@
                         <img src="../images/Productos/cupcakes-con-fresas-cubiertas-de-chocolate-blanco-634x420.jpg"
                             alt="Cupcakes con fresas" class="prod2c">
                         <div class="floatPar">
-                            <h3>Muffins </h3>
+                            <h3>Cupcakes </h3>
                             <p>De fresa y chocolate blanco</p>
                             <a href="./contactos.html"> Info</a>
                         </div>
@@ -150,7 +150,7 @@
                         <img src="../images/Productos/MINI-CHEESECAKES-DE-REESES_2.jpg"
                             alt="Cheesecake choco y avellanas" class="prod2a">
                         <div class="floatPar">
-                            <h3>cheesecake </h3>
+                            <h3>Cheesecake </h3>
                             <p>De chocolate y avellanas </p>
                             <a href="./contactos.html"> Info</a>
                         </div>
