--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -93,7 +93,7 @@
 
     <footer class="d-flex justify-content-between">
 
-        <p>&copy;Hecho con amor</p>
+        <p>&copy;Cheff in Rose, 2022</p>
         <div>
             <a href="https://www.instagram.com/" target="_blank"><img src="../images/Decoraciones/ig-removebg-preview.png" alt="instagram" class="iconfoot"></a>
             <a href="https://www.facebook.com/" target="_blank"><img src="../images/Decoraciones/facebook-removebg-preview.png" alt="facebook"
