texto de imagenes productos

--- a/pages/products.html
+++ b/pages/products.html
@@ -230,7 +230,7 @@
                             alt="Cheesecake frutos rojos" class="prod2a">
                         <div class="floatPar">
                             <h3>Cheesecake </h3>
-                            <p>Frutos Rojos</p>
+                            <p>De Frutos Rojos</p>
                             <a href="./contactos.html"> Info</a>
                         </div>
                     </div>
@@ -254,7 +254,7 @@
                         <img src="../images/Productos/pavlova-frutos-rojos.jpg" alt="Pavlova" class="prod2b">
                         <div class="floatPar">
                             <h3>Pavlova </h3>
-                            <p>Frutos Rojos</p>
+                            <p> De Frutos Rojos</p>
                             <a href="./contactos.html"> Info</a>
                         </div>
                     </div>
@@ -327,7 +327,7 @@
                         <div class="floatPar">
                             <h3>Cookies </h3>
                             <p>Con pepitas de chocolate</p>
-                            <a href="./contactos.html"> Info</a>
+                            <a href="./contactos.html"> Info </a>
                         </div>
                     </div>
 
