--- a/pages/promotions.html
+++ b/pages/promotions.html
@@ -167,8 +167,8 @@
                         <img src="../images/Productos/corazon-de-chocolate.jpg" alt="dia de san valentin"
                             class="prod2b">
                             <div class="floatPar">
-                                <h3>Giftbox </h3>
-                                <p> San Valentín</p>
+                                <h3>San Valentín </h3>
+                                
                                 <a href="./contactos.html"> Info</a>
                             </div>
                     </div>
@@ -267,7 +267,7 @@
                         <img src="../images/Productos/strawberry-shortcake.jpg" alt="Cumpleaños" class="prod2a">
                         <div class="floatPar">
                             <h3>Tortas pequeñas </h3>
-                            <p>Para compartir </p>
+                            
                             <a href="./contactos.html"> Info</a>
                         </div>
                     </div>
